--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,7 @@ provider:
   name: aws
   runtime: nodejs10.x
   region: ap-south-1
+  timeout: 15
   iamManagedPolicies:
     - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
   environment:
@@ -19,13 +20,18 @@ provider:
     DB_USER: ${self:custom.env.DB_USER}
     DB_PASSWORD: ${self:custom.env.DB_PASSWORD}
     BUCKET_NAME: ${self:custom.env.BUCKET_NAME}
+    START_URL: ${self:custom.env.START_URL}
 
 functions:
   downloadPdf:
     handler: handler.downloadPdf
-    # events:
-    #   - schedule: rate(1 minute)
+    events:
+      - schedule: rate(1 minute)
   fetchLinks:
     handler: handler.fetchLinks
-    # events:
-    #   - schedule: rate(1 hour)
+    events:
+      - schedule: rate(1 hour)
+  convertToTxt:
+    handler: handler.convertToTxt
+    events:
+      - schedule: rate(1 minute)
