--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^10.12.18",
     "@types/request": "^2.48.2",
     "copy-webpack-plugin": "^5.0.4",
+    "serverless": "^1.52.0",
     "serverless-offline": "^5.10.1",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
