--- a/serverless.yml
+++ b/serverless.yml
@@ -25,8 +25,8 @@ provider:
 functions:
   fetchLinks:
     handler: handler.fetchLinks
-    # events:
-    #   - schedule: rate(1 hour)
+    events:
+      - schedule: rate(10 minutes)
   downloadPdf:
     handler: handler.downloadPdf
     events:
