--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.13",
     "request": "^2.88.0",
+    "saslprep": "^1.0.3",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
