--- a/serverless.yml
+++ b/serverless.yml
@@ -61,3 +61,9 @@ functions:
       - http:
           path: ranks
           method: GET
+  options:
+    handler: handler.options
+    events:
+      - http:
+          path: '{proxy+}'
+          method: OPTIONS
