improve fetch links logic and increase its timeout

--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,7 @@ functions:
     handler: handler.fetchLinks
     events:
       - schedule: rate(5 minutes)
+    timeout: 10
   downloadPdf:
     handler: handler.downloadPdf
     memorySize: 1728
